--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "beyondcode/laravel-websockets": "dev-master",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
+        "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
