--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "laravel-echo": "^1.5.0",
-        "pusher-js": "^4.3.1"
+        "pusher-js": "^4.3.1",
+        "react-router-dom": "^5.0.0"
     }
 }
